current/crash_report/tout30/r2/gcc482/pk4/save_tc/cb2/20190212104455308005113.c-482-3.txt
20190212104455308005113.c: In function ‘func_28.constprop.11’:
20190212104455308005113.c:580:1: error: unrecognizable insn:
 }
 ^
(insn 175 174 176 17 (set (reg:QI 379)
        (const_int 248 [0xf8])) 20190212104455308005113.c:1237 -1
     (nil))
20190212104455308005113.c:580:1: internal compiler error: in extract_insn, at recog.c:2154
0xc05df8 _fatal_insn(char const*, rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:109
0xc05e4b _fatal_insn_not_found(rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:117
0xb8b99a extract_insn(rtx_def*)
	../../gcc/recog.c:2154
0x8fec83 instantiate_virtual_regs_in_insn
	../../gcc/function.c:1561
0x90088c instantiate_virtual_regs
	../../gcc/function.c:1928
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.
